:construction: Add overflow-hidden to fix unwanted scroll

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 @layer components {
+  body {
+    @apply overflow-hidden;
+  }
   h1 {
     @apply text-4xl font-bold;
   }
